<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacultyDetailFragment">

    <!-- ScrollView to enable scrolling for all content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <!-- Inside the NestedScrollView, wrap all the content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:weightSum="1">

            <!-- Faculty Full Name -->
            <TextView
                android:id="@+id/facultyMemberFullNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:maxLines="1"
                android:text="@string/faculty_full_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <!-- Faculty Degree -->
            <TextView
                android:id="@+id/facultyMemberDegreeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/degree_placeholder"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!-- Faculty Image -->
            <ImageView
                android:id="@+id/facultyMemberImageView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/image_description_placeholder"
                app:srcCompat="@drawable/mitrof" />

            <!-- Faculty Title -->
            <TextView
                android:id="@+id/facultyMemberTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/title_placeholder"
                android:textAlignment="center"
                android:textSize="16sp" />

            <!-- Faculty Bio -->
            <TextView
                android:id="@+id/facultyMemberBioTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio_placeholder"
                android:textSize="16sp"
                android:scrollbars="vertical"
                android:layout_marginBottom="16dp" />

            <!-- Website Button -->
            <Button
                android:id="@+id/browserButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/website" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
