<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Image -->
    <ImageView
        android:id="@+id/facultyMemberImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_description_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mitrof" />

    <!-- Title -->
    <TextView
        android:id="@+id/facultyMemberTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/title_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/facultyMemberFullNameTextView"
        app:layout_constraintTop_toBottomOf="@id/facultyMemberFullNameTextView" />

    <!-- Full Name Concatenation -->
    <TextView
        android:id="@+id/facultyMemberFullNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/faculty_full_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toEndOf="@id/facultyMemberImageView"
        app:layout_constraintTop_toTopOf="@id/facultyMemberImageView" />

    <!-- Degree -->
    <TextView
        android:id="@+id/facultyMemberDegreeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/degree_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@id/facultyMemberFullNameTextView"
        app:layout_constraintStart_toEndOf="@id/facultyMemberFullNameTextView" />

    <!-- Email -->
    <TextView
        android:id="@+id/facultyMemberWebsiteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/email_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/facultyMemberTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/facultyMemberTitleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
